# simulador-eleicao

./: CMakeLists.txt  readme.md
include/: contador_eleicao.h  main.h
src/: contador_eleicao.c  main.c  main3.c
